--- a/2.6.md
+++ b/2.6.md
@@ -1579,7 +1579,7 @@ This object constitutes a specific deal that was struck between a buyer and a se
   <tr>
     <td><code>bidfloor</code></td>
     <td>float; default 0</td>
-    <td>Minimum bid for this impression expressed in CPM.</td>
+    <td>Minimum bid for this deal expressed in CPM. If specified, this bidfloor supercedes the impression bid floor.</td>
   </tr>
   <tr>
     <td><code>bidfloorcur</code></td>
